--- a/unset.less
+++ b/unset.less
@@ -1,15 +1,23 @@
 .p-unset {
-  all: unset;
+  p {
+    all: unset;
+  }
 }
 
 .ul-unset {
-  all: unset;
-}
-
-.li-unset {
-  all: unset;
+  ul {
+    all: unset;
+  }
 }
 
 .ol-unset {
-  all: unset;
+  ol {
+    all: unset;
+  }
+}
+
+.li-unset {
+  li {
+    all: unset;
+  }
 }
